<resources>
    <string name="app_name">오예</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="submit">완료</string>
    <string name="login">로그인</string>
    <string name="login_email">E-mail</string>
    <string name="login_pwd">Password</string>
    <string name="login_join">가입하기</string>
    <string name="login_pro">본인은 서비스 </string>
    <string name="login_pro1">이용약관, </string>
    <string name="login_pro2">개인정보 수집 </string>
    <string name="login_pro3">이용 내용을 확인하였으며, 동의합니다.</string>
    <string name="findpw">비밀번호 찾기</string>
    <string name="pwdmsg">메일로 비밀번호가\n전송되었습니다.</string>
    <string name="join_text">회원가입</string>
    <string name="join_email">이메일</string>
    <string name="join_pwd">비밀번호</string>
    <string name="join_pwd_check">비밀번호 확인</string>
    <string name="join_pwd_check1">최소 8자리, 최대 15자리 이하</string>
    <string name="join_pwd_check2">"영문, 숫자 조합"</string>
    <string name="join_pwd_check_msg">비밀번호가 일치하지 않습니다.</string>
    <string name="join_cencel">취소</string>
    <string name="join_ok">가입</string>
    <string name="main_today_money">오늘사용가능금액</string>
    <string name="main_month_money">남은예산</string>
    <string name="main_trade">거래&#160;내역</string>
    <string name="main_won">원</string>
    <string name="budget">예산 설정</string>
    <string name="budget_day_txt1">월급일 매월</string>
    <string name="budget_day_txt2">일</string>
    <string name="budget_day_txt3">이번 월급일까지</string>
    <string name="budget_day_txt4">남은</string>
    <string name="budget_day_txt5">에 대한</string>
    <string name="budget_day_txt6">예산을 입력해주세요.</string>
    <string name="budget_won">원</string>
    <string name="budget_error1">월급일을 입력하세요.</string>
    <string name="budget_error2">월급일과 예산을 입력하세요.</string>
    <string name="budget_error3">예산을 입력하세요.</string>
    <string name="dialog_txt">월급일</string>
    <string name="dialog_ok">확인</string>
    <string name="dialog_cencel">취소</string>
    <string name="fix">고정지출 설정</string>
    <string name="fix_txt">고정지출을 입력해주세요</string>
    <string name="fix_name">명칭</string>
    <string name="purpose">목표 설정</string>
    <string name="purpose_txt">저금 목표를 설정해주세요</string>
    <string name="purpose_money">목표 금액</string>
    <string name="purpose_msg1">오늘 사용금액에서 남은 금액은 자정에</string>
    <string name="purpose_msg2">목표에 자동으로 저금됩니다. </string>
    <string name="purpose_msg3">목표 금액 달성시 TOSS로 저금을 할 수 있습니다.</string>
    <string name="purpose_won">원</string>
    <string name="nest">비상금 설정</string>
    <string name="nest_txt">특별한 날 예산을 추가할\n비상금을 설정해주세요.</string>
    <string name="nest_msg">
        비상금 설정시 예산을 초과하면\n
        비상금으로 오늘예산을 추가할 수 있습니다.</string>
    <string name="nest_set">총 예산의</string>
    <string name="nest_per">%</string>
    <string name="nest_error">비상금 예산은 한달 예산보다 작아야 합니다.</string>
    <string name="modi">이번 달 남은 예산</string>
    <string name="modi2">이번달 남은 비상금</string>
    <string name="modi3">비상금 예산은 한달 예산보다 작아야 합니다.</string>
    <string name="modi4">비상금 설정시 예산을 초과하면\n
    비상금으로 오늘예산을 추가할 수 있습니다.</string>
    <string name="modi5">오늘 예산에 추가하기 +</string>
    <string name="modpur">현재 저금액</string>
    <string name="set">설정</string>
    <string name="set1">알림 설정</string>
    <string name="set2">알림 소리</string>
    <string name="set3">알림 진동</string>
    <string name="set4">매월 예산 설정 알림 시간</string>
    <string name="set5">매일 예산 알림 시간</string>
    <string name="set6">비밀번호 변경</string>
    <string name="set7">위젯 설정</string>
    <string name="set8">문의 &amp; 앱 정보</string>
    <string name="set9">문의하기</string>
    <string name="set10">버전 정보</string>
    <string name="set11">로그아웃</string>
    <string name="set12">회원탈퇴</string>
    <string name="set13">최신 버전입니다</string>
    <string name="pwd">비밀번호 변경</string>
    <string name="pwd1">기존 비밀번호</string>
    <string name="pwd2">새 비밀번호</string>
    <string name="pwd3">새 비밀번호 확인</string>
    <string name="pwd4">최소 8자리, 최대 15자리 이하</string>
    <string name="pwd6">영문, 숫자 조합</string>
    <string name="nadd">오늘 예산에 비상금을\n얼마를 추가하시겠습니까?</string>
    <string name="nadd1">남은 비상금</string>
    <string name="nadd4">비상금보다 작은 금액을 입력해야 합니다.</string>
    <string name="newbudget">이번 달 예산을 입력해주세요</string>
    <string name="out">그동안 오예를\n사용해주셔서 감사합니다.</string>
    <string name="out2">더 나은 오예가 되기 위해 건의 사항이\n있으시면  감사히 받겠습니다.</string>
    <string name="out3">탈퇴</string>
    <string name="out4">건의하기</string>
    <string name="out5">오예에서 탈퇴하고\n모든 개인정보를\n삭제하시겠습니까?</string>
    <string name="out6">탈퇴하기</string>
    <string name="out7">계속 사용하기</string>
    <string name="send">문의하기</string>
    <string name="send2">개선사항 또는 기타 문의 사항을 보내주세요.</string>
    <string name="send3">문의 내용 입력</string>
    <string name="send4">보내기</string>
    <string name="change">비밀번호가\n변경되었습니다.</string>
    <string name="toss">Toss로 저금</string>
    <string name="fix_ok">네</string>
    <string name="fix_no">아니오</string>
    <string name="fix_msg1">위 내역이 고정지출</string>
    <string name="fix_msg2">이(가) 맞나요?</string>
    <string name="fix_msg3">한 번 확인시 다음 달부터 자동으로\n고정지출로 인식합니다. </string>
    <string name="pp_msg">목표 달성을 축하합니다!</string>
    <string name="pp_msg2">저금액</string>
    <string name="pp_cancel">무시</string>
    <string name="pp_ok">완료</string>
    <string name="pp_msg3">저금을 완료해주세요.</string>
    <string name="pp_msg4">저금을 해야 정확한 예산관리를 할 수 있습니다.\n저금 후, 완료를 클릭해주세요.\n\n무시할 경우, 누적해서  저금액이 쌓입니다.</string>
    <string name="pp_msg5">새 저금 목표를 입력해주세요.</string>
    <string name="pp_msg6">목표 금액</string>
    <string name="term">오예 이용약관</string>
    <string name="term1">제1장 총칙</string>
    <string name="term2">제1조 목적</string>
    <string name="term3">이 약관은 주식회사 고고랩(이하 “회사”)이 모바일로 제공하는 오예 서비스 및 이에 부수된 제반 서비스(이하 “서비스”)의 이용과 관련하여 회사와 회원 간의 권리, 의무 및 책임사항, 기타 필요한 사항을 규정함을 목적으로 합니다.</string>
    <string name="term4">제2조 용어의 정의</string>
    <string name="term5">① 이 약관에서 사용하는 용어의 정의는 다음과 같습니다.
1.“회사”라 함은 모바일 앱을 통해 서비스를 제공하는 사업자를 의미합니다.
2. “오예” 애플리케이션이란 스마트폰, 태블릿 등 모바일 디바이스(이하 "모바일 디바이스")에 설치되어 전자금융거래서비스를 제공하는 애플리케이션을 말합니다.
3. “회원”이라 함은 회사의 서비스에 접속하여 회원가입 및 등록을 하고, 회사와 오예 약관에 따라 이용계약을 체결하여 회사가 제공하는 서비스를 이용하는 고객을 의미합니다.
4. “계정(ID)”이라 함은 회원의 식별과 서비스 이용을 위하여 회원이 설정하고 회사가 승인하여 등록된 문자, 숫자 또는 특수문자의 조합을 의미합니다.
5. “계정정보“라 함은 회원의 계정, 비밀번호, 성명 등 회원이 회사에 제공한 일반정보 및 서비스이용정보, 이용요금 결제상태 등 생성정보를 통칭합니다.
6. “비밀번호(Password)”라 함은 회원이 부여받은 계정과 일치되는 회원임을 확인하고 회원의 정보 및 권익보호를 위해 회원 자신이 선정한 문자, 숫자 또는 특수문자의 조합을 의미합니다.
7. “서비스”라 함은 회사가 회원에게 모바일 디바이스으로 제공하는 오예 서비스 및 이에 부수된 제반 서비스를 의미하며, 이는 1)회원의 오예 계정정보를 이용한 금융조회 서비스, 2)이용자의 동의 하에 공유된 계정정보를 이용하여 오예에 연동된 타 서비스 이용 등을 총칭합니다.
8. “콘텐츠”라 함은 회사가 서비스에 제공하는 문자, 문서, 그림, 음성, 음향, 영상 또는 이들의 조합으로 이루어진 모든 정보를 말합니다.
9. “스크래핑”이라 함은 인터넷 스크린 또는 모바일 화면에 보여지는 데이터 중에서 필요한 데이터만을 추출하도록 만들어진 프로그램 입니다. 오예 서비스에서는 각 은행 및 카드사에서 제공하는 카드소비내역 SMS(MMS), 스마트폰 알림(Push 알림) 등을 서비스의 소비내역 항목에 기재하기 위해 읽어오는 것을 말합니다.
10. "전자금융거래"라 함은 회사가 전자적 장치를 통하여 전자금융업무를 제공하고, 회원이 회사의 종사자와 직접 대면하거나 의사소통을 하지 아니하고 자동화된 방식으로 이를 이용하는 거래를 말합니다.
11. "전자지급거래"라 함은 자금을 주는 자가 회사로 하여금 전자지급수단을 이용하여 자금을 받는 자에게 자금을 이동하게 하는 전자금융거래를 말합니다.
12. "전자적 장치"라 함은 전자금융거래정보를 전자적 방법으로 전송하거나 처리하는 데 이용되는 장치로서 현금자동지급기, 자동입출금기, 지급용단말기, 컴퓨터, 전화기 그 밖에 전자적 방법으로 정보를 전송하거나 처리하는 장치를 말합니다.
13. "접근매체"라 함은 전자금융거래에 있어서 거래지시를 하거나 이용자 및 거래내용의 진실성과 정확성을 확보하기 위하여 사용되는 수단 또는 정보로서 전자금융거래서비스를 이용하기 위하여 회사에 등록된 암호, 금융기관 또는 전자금융업자에 등록된 회원번호 및 기타 회사가 지정한 수단을 말합니다.
14. “거래지시”라 함은 회원이 본 약관에 따라 회사에게 전자금융거래의 처리를 지시하는 것을 말합니다.
15. “오류”라 함은 회원의 고의 또는 과실 없이 전자금융거래가 전자금융거래계약 또는 회원의 거래지시에 따라 이행되지 아니한 경우를 말합니다.
16. ‘전자지급수단’이라 함은 선불전자지급수단, 신용카드 등 전자금융거래법 제2조 제15호에서 정하는 전자적 방법에 따른 지급수단을 말합니다.
② 이 약관에서 사용하는 용어의 정의는 제1항 각호에서 정하는 것을 제외하고는 전자금융거래법 등 관계법령 및 기타 상관례에 따릅니다.</string>
    <string name="term6">제3조 서비스의 종류</string>
    <string name="term7">회사는 회원에게 아래와 같은 서비스를 제공합니다.
①회원이 이용 중인 신용/체크카드 결제 승인문자 및 은행 입출금알림 문자 연동을 통한 개인 자산 관련 지출과 수입 내역 집계 및 관리 서비스
②회원의 통합 수입-지출 통계 서비스
③회원 계정정보 데이터의 웹서버 백업
④기타 회사가 추가 개발하거나 체휴계약 등을 통해 회원에게 제공하는 일체의 서비스
회사는 필요한 경우 서비스의 내용을 추가 또는 변경할 수 있습니다. 단, 이경우 회사는 추가 또는 변경내용을 회원에게 공지하여야 합니다.</string>
    <string name="term8">제4조 약관의 명시와 개정</string>
    <string name="term9">①회사는 이 약관의 내용을 회원이 알 수 있도록 서비스의 최초 설치시에 고지하며, 서비스 이용 도중 쉽게 열람 가능하도록 서비스 화면 내에 게시합니다.
②회사는 회원이 회사와 이 약관의 내용에 관하여 질의 및 응답을 할 수 있도록 조치를 취합니다.
③회사는 서비스를 이용하고자 하는 자(이하 “이용자”)가 약관의 내용을 알 수 있도록 작성하고 약관에 동의하기에 앞서 약관에 정하여져 있는 내용 중 청약철회, 과오납금의 환급, 계약 해제·해지, 회사의 면책사항 및 회원에 대한 피해보상 등 중요한 내용을 회원이 알 수 있도록 합니다.
④회사는 「전자상거래 등에서의 소비자보호에 관한 법률」, 「약관의 규제에 관한 법률」, 「정보통신망이용촉진 및 정보보호 등에 관한 법률」, 「콘텐츠산업진흥법」, 「신용정보의 보호 및 이용에 관한 법률」등 관련 법령에 위배하지 않는 범위에서 이 약관을 개정할 수 있습니다.
⑤회사가 약관을 개정할 경우에는 적용일자 및 개정내용, 개정사유 등을 현행 약관과 함께 명시하여 그 적용일자로부터 최소한 7일 이전(단, 회원에게 불리하거나 중대한 사항의 변경은 30일 이전)부터 그 적용일자 경과 후 상당한 기간이 경과할 때까지 서비스 초기화면 또는 초기화면과의 연결화면을 통해 공지합니다.
⑥회사가 약관을 개정할 경우에는 개정약관 공지 후 개정약관의 적용에 대한 회원의 동의 여부를 확인합니다. 개정약관 공지 시 회원이 동의 또는 거부의 의사표시를 하지 않으면 승낙한 것으로 간주하겠다는 내용도 함께 공지한 경우 회원이 약관 시행일까지 거부의사를 표시하지 않는다면 개정약관에 동의한 것으로 간주할 수 있습니다.
⑦회원이 개정약관의 적용에 동의하지 않는 경우 회사 또는 회원은 서비스 이용계약을 해지할 수 있습니다.

</string>
    <string name="term10">제5조 약관 외 준칙</string>
    <string name="term11">이 약관에서 정하지 아니한 사항과 이 약관의 해석에 관하여는 「전자상거래 등에서의 소비자보호에 관한 법률」, 「약관의 규제에 관한 법률」, 「정보통신망이용촉진 및 정보보호 등에 관한 법률」, 「콘텐츠산업진흥법」, 「신용정보의 보호 및 이용에 관한 법률」 등 관련 법령에 따릅니다.</string>
    <string name="term12">제6조 운영정책</string>
    <string name="term13">①약관을 적용하기 위하여 필요한 사항과 회원의 권익을 보호하고 서비스 내 질서를 유지하기 위하여 회사는 약관에서 구체적 범위를 정하여 위임한 사항을 서비스 운영정책(이하 “운영정책”이라 합니다)으로 정할 수 있습니다.
②회사는 운영정책의 내용을 회원이 알 수 있도록 서비스 초기 화면이나 서비스 홈페이지에 게시하거나 연결화면을 제공하는 방법으로 회원에게 공지하여야 합니다.
③회원의 권리 또는 의무에 중대한 변경을 가져오거나 약관 내용을 변경하는 것과 동일한 효력이 발생하는 운영정책 개정의 경우에는 제4조의 절차에 따릅니다. 단, 운영정책 개정이 다음 각 호의 어느 하나에 해당하는 경우에는 제2항의 방법으로 사전에 공지합니다.
1.약관에서 구체적으로 범위를 정하여 위임한 사항을 개정하는 경우
2.회원의 권리, 의무와 관련 없는 사항을 개정하는 경우
3.운영정책의 내용이 약관에서 정한 내용과 근본적으로 다르지 않고 회원이 예측가능한 범위내에서 운영정책을 개정하는 경우
</string>
    <string name="term14">제2장 이용계약의 체결</string>
    <string name="term15">제7조 서비스 이용계약의 체결</string>
    <string name="term16">①서비스에 대한 이용계약(이하 “이용계약”)은 회원이 되고자 하는 자(이하 “가입신청자”)가 본 약관에 동의하고 정해진 가입양식에 회원정보(계정, 비밀번호, 기타 회사가 필요하다고 인정하는 사항)를 기입하면 회사가 이에 대해 승낙함으로써 체결됩니다.
②가입신청자는 회사가 요구하는 개인정보를 성실히 제공하여야 합니다.
1.가입신청자는 반드시 신청자 본인의 명의로 가입하여야 합니다.
2.가입신청자는 본인 명의의 결제수단(금융기관의 계좌, 카드 등)을 소유하여야 하며, 결제수단의 명의는 가입신청자의 명의자와 일치하여야 합니다.
3.회사는 본인확인기관 등을 통한 “본인확인”을 요청합니다. 본인확인의 경우 개인정보보호 법령에 따라 본인확인기관 등이 제공하는 별도의 이용약관 동의에 의거하여 본인확인 절차를 진행하며, 회사는 본인확인 절차를 취할 수 없는 이용신청에 대해서는 해당 신청자에게 추가적으로 증빙자료를 요청할 수 있습니다.
③회사는 가입신청자의 이용신청이 다음 각 호에 해당하는 경우 승낙하지 않거나 승낙을 유보할 수 있습니다.
1.실명이 아니거나 타인의 명의를 이용한 경우
2.허위의 정보를 기재하거나, 회사가 제시하는 내용을 기재하지 않은 경우
3.가입신청자가 이 약관에 의하여 이전에 회원자격을 상실한 적이 있는 경우, 단 회사의 회원 재가입 승낙을 얻은 경우에는 예외로 함
4.이용자의 귀책사유로 인하여 승인이 불가능하거나 기타 규정한 제반사항을 위반하여 신청하는 경우</string>
    <string name="term17">제8조 오예 회원 계정(ID) 및 비밀번호</string>
    <string name="term18">①회사는 계정정보를 통하여 당해 회원의 서비스 이용가능 여부 등의 제반 회원 관리업무를 수행하며, 부여된 계정은 회원 식별을 위한 정보로만 사용됩니다.
②회원은 자신의 계정정보에 대해 주의, 의무를 다하여 관리하여야 합니다. 회원이 본인의 계정정보를 소홀히 관리하거나 제3자에게 이용을 승낙함으로써 발생하는 손해에 대하여는 회원에게 책임이 있습니다.
③비밀번호의 관리책임은 회원에게 있으며, 회원이 원하는 경우에는 보안상의 이유 등으로 언제든지 변경이 가능합니다.
④회원은 정기적으로 비밀번호를 변경하여야 합니다.</string>
    <string name="term19">제9조 회원 정보의 수집</string>
    <string name="term20">①회사는 이용계약을 위하여 회원이 제공한 정보 외에도 수집목적 또는 이용목적을 밝혀 회원으로부터 필요한 정보를 수집할 수 있습니다. 이 경우, 회사는 회원으로부터 정보수집에 대한 동의를 받습니다.
②회사가 정보수집을 위하여 회원의 동의를 받는 경우, 회사는 수집하는 개인정보의 항목 및 수집방법, 수집목적 및 이용목적, 개인정보의 보유 및 이용기간, 제3자에 대한 정보제공 사항(제공받는 자, 제공받는 자의 이용목적, 제공정보의 항목, 보유 및 이용기간)을 개인정보처리방침으로 미리 명시하거나
고지합니다. 회원은 정보제공에 동의하더라도 언제든지 그 동의를 철회할 수 있습니다.
③회원은 회사에게 정보를 제공하고자 하는 경우 사실대로 제공하여야 합니다.
</string>
    <string name="term21">제10조 회원 정보의 제공 및 변경</string>
    <string name="term22">①회원은 이 약관에 의하여 회사에 정보를 제공하여야 하는 경우에는 진실된 정보를 제공하여야 하며, 허위정보 제공으로 인해 발생한 불이익에 대해서는 보호받지 못합니다.
②회원은 개인정보관리화면을 통하여 언제든지 자신의 개인정보를 열람하고 수정할 수 있습니다. 다만, 서비스 관리를 위해 필요한 실명, 성별 등은 수정이 불가능합니다.
③회원은 회원가입 신청 시 기재한 사항이 변경되었을 경우 모바일로 수정을 하거나 기타 방법으로 회사에 대하여 그 변경사항을 알려야 하며, 변경불가한 성명, 성별 등에 변경사항이 있을 시 고객센터에서 확인 후 변경내역을 처리합니다.
④제2항의 변경사항을 회사에 알리지 않아 발생한 불이익에 대하여 회사는 책임을 지지 않습니다.

</string>
    <string name="term23">제3장 계약 당사자의 의무</string>
    <string name="term24">제11조 회사의 의무</string>
</resources>