<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.changjoo.ohyeah.terms.Terms1Activity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#4a4a4a">
                <ImageButton
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    app:srcCompat="@mipmap/close"
                    android:background="@null"
                    android:layout_gravity="center_vertical"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="24dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="56.8dp"
                    android:text="@string/term"
                    android:textSize="20.3sp"
                    android:textColor="#ffffff"
                    android:letterSpacing="0.05"
                    android:lineSpacingExtra="7.5sp"
                    android:textStyle="normal"
                    android:gravity="center"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />
            </RelativeLayout>

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/term1"
                android:textSize="12sp"
                android:textColor="#000000"
                android:letterSpacing="-0.03"
                android:textStyle="bold"
                android:layout_marginLeft="33.5dp"/>
            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="14.3dp" />
            <TextView
                android:layout_marginLeft="33.5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/term2"
                android:textSize="12sp"
                android:textColor="#000000"
                android:letterSpacing="-0.03"
                android:textStyle="bold"/>
            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="8.3dp" />
            <TextView
                android:layout_marginLeft="33.5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/term3"
                android:textSize="10sp"
                android:textColor="#9b9b9b"
                android:letterSpacing="-0.04"
                android:lineSpacingExtra="5.3sp"
                />

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="34dp" />

            <TextView
                android:layout_marginLeft="33.5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/term4"
                android:textSize="12sp"
                android:textColor="#000000"
                android:letterSpacing="-0.03"
                android:textStyle="bold"/>

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="8.3dp" />

            <TextView
                android:layout_marginLeft="33.5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/term5"
                android:textSize="10sp"
                android:textColor="#9b9b9b"
                android:letterSpacing="-0.04"
                android:lineSpacingExtra="5.3sp"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
