<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context="com.changjoo.ohyeah.ui.SetActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:background="@drawable/black_underline"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="100">

            <android.support.v4.widget.Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5.9" />

            <ImageButton
                android:id="@+id/back"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3.3"
                android:background="@mipmap/back_btn" />

            <android.support.v4.widget.Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="23.3" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="34.9"
                android:gravity="center"
                android:text="@string/set"
                android:textColor="#3b4aaa"
                android:textSize="20.3sp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="39.8dp"
            android:background="@drawable/gray_underline_bg">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="7dp"
                android:layout_marginStart="16dp"
                android:text="@string/set1"
                android:textColor="#4a4a4a"
                android:textSize="10.8sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="52.8dp"
            android:background="@drawable/gray_underline">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:text="@string/set2"
                android:textColor="#000000"
                android:textSize="18.5sp" />

            <Switch
                android:id="@+id/soundSwt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="15.9dp"
                android:theme="@style/SCBSwitch" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="52.8dp"
            android:background="@drawable/gray_underline">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:text="@string/set3"
                android:textColor="#000000"
                android:textSize="18.5sp" />

            <Switch
                android:id="@+id/viveSwt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="15.9dp"
                android:theme="@style/SCBSwitch" />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/changepwd"
            android:layout_width="match_parent"
            android:layout_height="52.8dp"
            android:background="@drawable/gray_underline">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:text="@string/set6"
                android:textColor="#000000"
                android:textSize="18.5sp" />

            <ImageView
                android:layout_width="17.8dp"
                android:layout_height="17.8dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="15.9dp"
                app:srcCompat="@mipmap/back1" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="39.8dp"
            android:background="@drawable/gray_underline_bg">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="7dp"
                android:layout_marginStart="16dp"
                android:text="@string/set8"
                android:textColor="#4a4a4a"
                android:textSize="10.8sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/send_email"
            android:layout_width="match_parent"
            android:layout_height="52.8dp"
            android:background="@drawable/gray_underline">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:text="@string/set9"
                android:textColor="#000000"
                android:textSize="18.5sp" />

            <ImageView
                android:layout_width="17.8dp"
                android:layout_height="17.8dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="15.9dp"
                app:srcCompat="@mipmap/back1" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="52.8dp"
            android:background="@drawable/gray_underline">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:text="@string/set10"
                android:textColor="#000000"
                android:textSize="18.5sp" />

            <TextView
                android:id="@+id/versionState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="8.3dp"
                android:layout_toEndOf="@+id/textView10"
                android:text="@string/set13"
                android:textColor="#c33b4d"
                android:textSize="8.5sp" />

            <TextView
                android:id="@+id/appVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="15.5dp"
                android:text="1.0.0"
                android:textColor="#4a4a4a"
                android:textSize="18.5sp" />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="27.8dp"
            android:background="@drawable/gray_underline_bg" />

        <Button
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="53.3dp"
            android:background="@drawable/gray_underline"
            android:text="@string/set11"
            android:textColor="#9b9b9b"
            android:textSize="18.5sp" />

        <Button
            android:id="@+id/signout"
            android:layout_width="match_parent"
            android:layout_height="53.3dp"
            android:background="@drawable/gray_underline"
            android:text="@string/set12"
            android:textColor="#9b9b9b"
            android:textSize="18.5sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/gray_underline_bg" />

    </LinearLayout>

</LinearLayout>
