<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="267dp"
        android:layout_height="261.8dp"
        android:background="#ffffff"
        android:orientation="vertical" >


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="208.5dp">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="24.5dp"
                android:layout_height="28.5dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="31dp"
                android:src="@mipmap/symbol" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView6"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20.3dp"
                android:text="@string/pp_msg3"
                android:textColor="#000000"
                android:textSize="18.5sp"
                android:textStyle="italic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:gravity="center"
                android:lineSpacingExtra="4sp"
                android:text="@string/pp_msg4"
                android:textColor="#4a4a4a"
                android:textSize="10.8sp"
                android:layout_below="@+id/textView3"
                android:layout_centerHorizontal="true" />


        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="53.3dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_left"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/gray_ract"
                android:textSize="18.5sp"
                android:textColor="#000000"
                android:text="@string/pp_cancel" />
            <Button
                android:id="@+id/btn_right"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/gray_ract"
                android:textSize="18.5sp"
                android:textColor="#000000"
                android:text="@string/pp_ok" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
